# inscopix-cnmfe

./: .gitignore  CITATION.cff  CMakeLists.txt  Dockerfile  Inscopix_CNMF-E_Demo.ipynb  Inscopix_CNMFe_Demo.ipynb  README.md  build.sh  example.cpp  pythonAPI.cpp  setup.py
data/: params.json
docs/: comparison_to_caiman.md  developers.md  developers_guide.md  parameter_tuning.md
docs/parameter-tuning/: Untitled.ipynb
docs/parameter-tuning/PFC_V3_38/: index.html
example/: CMakeLists.txt  main.cpp
include/cnmfe/: cnmfe.h
include/isx/: cnmfe.h
src/: cnmfe.cpp  isxArmaUtils.cpp  isxArmaUtils.h  isxCnmfeCore.cpp  isxCnmfeCore.h  isxCnmfeDeconv.cpp  isxCnmfeDeconv.h  isxCnmfeGreedy.cpp  isxCnmfeIO.cpp  isxCnmfeIO.h  isxCnmfeNoise.h  isxCnmfeParams.h  isxCnmfePatch.cpp  isxCnmfePatch.h  isxCnmfeSpatial.cpp  isxCnmfeTemporal.cpp  isxCnmfeUtils.cpp  isxCnmfeUtils.h  isxExportTiff.cpp  isxMemoryMappingUtils.cpp  isxMemoryMappingUtils.h  isxOasis.cpp  isxOasis.h  isxTiffMovie.cpp  isxTiffMovie.h  isxUtilities.cpp  isxUtilities.h
src/api/: pythonAPI.cpp
src/core/: isxCnmfeCore.cpp  isxCnmfeDeconv.cpp  isxCnmfeDeconv.h  isxCnmfeGreedy.cpp  isxCnmfeGreedy.h  isxCnmfeInitialization.cpp  isxCnmfeInitialization.h  isxCnmfeMerging.cpp  isxCnmfeMerging.h  isxCnmfeNoise.cpp  isxCnmfeNoise.h  isxCnmfeParams.h  isxCnmfePatch.cpp  isxCnmfePatch.h  isxCnmfeSpatial.h  isxCnmfeTemporal.cpp  isxCnmfeTemporal.h  isxCnmfeUtils.cpp  isxCnmfeUtils.h
src/exposed/: cnmfe.cpp
src/io/: isxCnmfeIO.cpp  isxCnmfeIO.h  isxExportTiff.cpp  isxExportTiff.h  isxTiffBuffer.cpp  isxTiffBuffer.h  isxTiffMovie.cpp  isxTiffMovie.h
src/log/: isxLog.h  isxLogger.cpp  isxLogger.h
src/oasis/: isxOasis.cpp
src/utilities/: isxArmaUtils.cpp  isxArmaUtils.h  isxLassoLars.h  isxMemoryMappedFileUtils.cpp  isxMemoryMappedFileUtils.h  isxMemoryMappingUtils.cpp  isxUtilities.cpp  isxUtilities.h
test/: ArmaUtilsTest.cpp  CMakeLists.txt  CnmfeDeconvTest.cpp  CnmfeGreedyTest.cpp  CnmfeIOTest.cpp  CnmfeInitializationTest.cpp  CnmfeMergingTest.cpp  CnmfeNoiseTest.cpp  CnmfeSpatialTest.cpp  CnmfeTest.cpp  CnmfeUtilsTest.cpp  DependenciesTest.cpp  MemoryMappedFileUtilsTest.cpp  OasisTest.cpp  TiffMovieTest.cpp  UtilitiesTest.cpp  isxTest.cpp  isxTest.h  testCnmfe.cpp  testDependencies.cpp
test/data/: params.json  synthetic_movie_float32.tif  synthetic_movie_uint16.tif
test/scripts/: generate_python_wheels.sh
